2001-09-28  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Change the binary name to
	background-properties-control and create a wrapper script from
	../common/wrapper-script.in to be named
	background-properties-capplet
	Remove support for disabling bonobo-conf build

2001-09-22  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (run_render_pipeline): Create the root pixmap after we
	know about the gradient geometry
	(place_pixbuf):
	(tile_pixbuf): Fix calls to gdk_pixbuf_composite[_color]
	(render_wallpaper): Fix setting of pixbuf_xlate
	(render_background): Fix pixbuf_render_geom here in case the
	gradient geometry is small

2001-09-21  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c: Total reorganization

2001-09-17  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (preferences_save): Move from
	applier.c:output_compat_prefs; it really belongs here
	(preferences_class_init): Don't construct an applier here

	* background-properties-capplet.c (setup_dialog): Create a new
	applier for every dialog
	(create_dialog): Create applier locally, just for this one widget
	(apply_settings): Create applier locally and destroy on exit
	(main): Remove call to gnome_window_set_...

2001-09-14  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c (property_change_cb): Use
	applier_render_color_p
	(real_realize_cb): Ditto
	(get_legacy_settings): Set the wallpaper_enabled flag based on the
	value of wallpaper_filename; use (none) as the default for
	wallpaper_filename
	(setup_dialog): Removed unused variable

	* applier.c (applier_render_color_p): Renamed from
	applier_render_gradient_p; check both solid color and gradient

	* preferences.c (preferences_need_color_opts): Removed; use
	applier_render_color_p instead

2001-09-13  Bradford Hovinen  <hovinen@ximian.com>

	* preferences.c (preferences_load_from_bonobo_db):
	(preferences_load_from_bonobo_pbag): Default to TRUE on enabled;