@@ -1,5 +1,11 @@
 2001-09-28  Bradford Hovinen  <hovinen@ximian.com>
 
+	* applier.c (fill_gradient): Copied from control center 1.4.0
+	(render_background): Create the pixbuf first and then pass to
+	fill_gradient
+	(render_to_screen): Use GDK_RGB_DITHER_MAX rather than
+	GDK_RGB_DITHER_NORMAL
+
 	* Makefile.am: Change the binary name to
 	background-properties-control and create a wrapper script from
 	../common/wrapper-script.in to be named
